<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="122dp"
        android:gravity="center"
        android:text="@string/not_bored"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/tv_title_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="350dp"
        android:text="@string/participants"
        android:textColor="@color/black"
        android:textSize="@dimen/tv_participants_size"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_participants"
        android:layout_width="@dimen/common_width_component"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="380dp"
        android:background="@color/white"
        android:inputType="number" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="@dimen/common_width_component"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="480dp"
        android:text="@string/start" />

    <TextView
        android:id="@+id/activity_intent_navigation_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="550dp"
        android:text="@string/terms_conditions_link"
        android:textColor="@color/black"
        android:textStyle="bold" />


</RelativeLayout>