<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".TermsAndConditionsFragment">

    <TextView
        android:id="@+id/tv_title_terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_subtitle_terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_bored"
        android:textColor="@color/blue"
        android:textSize="@dimen/tv_title_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_terms_conditions"
        app:layout_constraintVertical_bias="0.04" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="180dp">

        <TextView
            android:id="@+id/textTermsConditions"
            android:layout_width="360dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:text="@string/terms_conditions" />


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>