<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuggestionFragment"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_activity_name"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/testing"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_participants_num"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_activity_name">
            <ImageView
                android:id="@+id/iv_participants"
                android:layout_width="48sp"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:src="@drawable/ic_participants" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="32sp"
                android:text="@string/participants" />
            <TextView
                android:id="@+id/tv_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:textAlignment="textEnd"
                android:textSize="32sp"
                android:text="2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_activity_price"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_participants_num">
            <ImageView
                android:id="@+id/iv_price"
                android:layout_width="48sp"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:src="@drawable/ic_price" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="32sp"
                android:text="@string/price" />
            <TextView
                android:id="@+id/tv_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:textAlignment="textEnd"
                android:textSize="32sp"
                android:text="@string/testing" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_activity_type"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_activity_price">
            <ImageView
                android:id="@+id/iv_list"
                android:layout_width="48sp"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:src="@drawable/ic_list" />
            <TextView
                android:id="@+id/tv_activity_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="32sp"
                android:text="@string/type" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_try_another"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="32dp"
            android:text="@string/try_another"
            android:backgroundTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>